--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,11 @@
             <scope>test</scope>
         </dependency>
 
-
-
+        <!-- faker dependency -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 </project>
