--- a/configuration.properties
+++ b/configuration.properties
@@ -24,3 +24,8 @@ library3.database.password=Pzi75akktLC4BoI9
 library3.base_url=http://library3.cybertekschool.com
 library3.librarian_username=librarian12@library
 library3.librarian_password=GBjogjFV
+
+# Spartan App info
+spartan1.database.url=jdbc:oracle:thin:@100.25.162.89:1521:XE
+spartan1.database.username=SP
+spartan1.database.password=SP
