--- a/configuration.properties
+++ b/configuration.properties
@@ -29,3 +29,4 @@ library3.librarian_password=GBjogjFV
 spartan1.database.url=jdbc:oracle:thin:@100.25.162.89:1521:XE
 spartan1.database.username=SP
 spartan1.database.password=SP
+spartan1.base_url=http://100.25.162.89:8000
